app/styles/_grid.scss
$directions: top, bottom, left, right;
@each $direction in $directions{
  .gutter--#{$direction}{
    margin-#{$direction}: $grid-gutter-width;
  }
  .padding--#{$direction}{
    padding-#{$direction}: $grid-gutter-width;
  }
}
html,body{
  height: 100%;
}
.d-flex {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}
.d-inline-flex {
  display: inline-flex;
  flex-direction: column;
}
.flexbox .container {

  @include media-breakpoint-up(lg) {
    width: calc(#{$container-lg} + #{$grid-gutter-width});
  }
  @include media-breakpoint-up(md) {
    width: calc(#{$container-md} + #{$grid-gutter-width});
  }
  @include media-breakpoint-down(md) {
    // width: calc(#{$container-md} + #{$grid-gutter-width});
    width: 100%;
  }
  // @include media-breakpoint-up(sm) {
  //   width: calc(#{$container-sm} + #{$grid-gutter-width});
  // }
}

.flexbox .row{

  &--no-gutter {
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: 0;
    margin-right: 0;

    & > [class*="col-"],
    & > [class*=" col-"]{
      padding-left: 0;
      padding-right: 0;
    }
  }

  &--half-gutter {
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    flex-wrap: wrap;
    margin-right: -#{$grid-gutter-width / 4};
    margin-left: -#{$grid-gutter-width / 4};

    & > [class*="col-"],
    & > [class*=" col-"]{
      padding-right: #{$grid-gutter-width / 4};
      padding-left: #{$grid-gutter-width / 4};
    }
  }

  &--double-gutter {
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    flex-wrap: wrap;
    margin-right: -#{$grid-gutter-width};
    margin-left: -#{$grid-gutter-width};

    & > [class*="col-"],
    & > [class*=" col-"]{
      padding-right: #{$grid-gutter-width};
      padding-left: #{$grid-gutter-width};
    }

    @include media-breakpoint-down(md) {
      margin-right: -#{$grid-gutter-width / 2};
      margin-left: -#{$grid-gutter-width / 2};

      & > [class*="col-"],
      & > [class*=" col-"]{
        padding-right: #{$grid-gutter-width / 2};
        padding-left: #{$grid-gutter-width / 2};
      }
    }
  }

  &--quadruple-gutter {
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    flex-wrap: wrap;
    margin-right: -#{$grid-gutter-width * 2};
    margin-left: -#{$grid-gutter-width * 2};

    & > [class*="col-"],
    & > [class*=" col-"]{
      padding-right: #{$grid-gutter-width * 2};
      padding-left: #{$grid-gutter-width * 2};
    }
  }
}

